--- a/src/style.scss
+++ b/src/style.scss
@@ -38,6 +38,10 @@ body {
     justify-content: center;
 }
 
+.justify_flexend {
+    justify-content: flex-start;
+}
+
 .justify_around {
     justify-content: space-around;
 }
