Add data, and card markup: working to dynamic one

--- a/src/assets/css/partials/_footercontent.scss
+++ b/src/assets/css/partials/_footercontent.scss
@@ -61,3 +61,19 @@
 .padding_bottom_15 {
     padding-bottom: 15px;
 }
+
+.up_footer {
+    background-color: #0282F9;
+    padding: 25px;
+}
+
+.icon_footer {
+    width: 50px;
+}
+
+.icons_text {
+    color: white;
+    padding-left: 10px;
+    font-weight: 100;
+    font-size: 15px;
+}
