--- a/src/assets/css/partials/_maincontent.scss
+++ b/src/assets/css/partials/_maincontent.scss
@@ -47,6 +47,7 @@
     color: white;
     text-transform: uppercase;
     text-align: justify;
+    width: 192px;
     padding-top: 10px;
     font-size: 15px;
 }
